--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.4",
+    "@mui/styles": "^5.7.0",
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "cookie": "^0.5.0",
+    "cookies": "^0.8.0",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
