--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.0.1",
     "cookie": "^0.5.0",
     "cookies": "^0.8.0",
+    "framer-motion": "^6.3.4",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "next": "12.1.5",
