--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
     "@mui/styles": "^5.7.0",
+    "@mui/x-data-grid": "^5.12.3",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cookie": "^0.5.0",
     "cookies": "^0.8.0",
     "firebase": "^9.8.3",
-    "js-cookie": "^3.0.1",
     "framer-motion": "^6.3.4",
     "googleapis": "^104.0.0",
     "js-cookie": "^3.0.1",
