--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.0.1",
     "cookie": "^0.5.0",
     "cookies": "^0.8.0",
+    "cors": "^2.8.5",
     "firebase": "^9.8.3",
     "framer-motion": "^6.3.4",
     "googleapis": "^104.0.0",
