--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.15.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
@@ -16,11 +17,13 @@
     "@mui/material": "^5.6.4",
     "@mui/styles": "^5.7.0",
     "@mui/x-data-grid": "^5.12.3",
+    "@mui/x-date-pickers": "^5.0.0-beta.4",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cookie": "^0.5.0",
     "cookies": "^0.8.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.1",
     "firebase": "^9.8.3",
     "framer-motion": "^6.3.4",
     "googleapis": "^104.0.0",
