--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cookie": "^0.5.0",
     "cookies": "^0.8.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.1",
     "draft-js": "^0.11.7",
     "firebase": "^9.8.3",
     "framer-motion": "^6.3.4",
