--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@date-io/date-fns": "^2.15.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mantine/carousel": "^5.1.4",
     "@mantine/core": "^5.1.1",
     "@mantine/hooks": "^5.1.1",
     "@mantine/next": "^5.1.1",
@@ -31,6 +32,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.29.1",
     "draft-js": "^0.11.7",
+    "embla-carousel-react": "^7.0.0",
     "firebase": "^9.8.3",
     "framer-motion": "^6.3.4",
     "googleapis": "^104.0.0",
@@ -41,6 +43,7 @@
     "nodemailer": "^6.7.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "sass": "^1.51.0",
     "timeago.js": "4.0.0-beta.3"
   },
